# DriftSense

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TESTING.md
sample_manifests/actual/: untracked-secret.yaml  web-config.yaml  web-deployment.yaml
sample_manifests/desired/: web-config.yaml  web-deployment.yaml  web-service.yaml
scripts/: collect_cluster_state.sh
src/driftsense/: __init__.py  cli.py  diff_engine.py  manifest_loader.py  report.py
src/driftsense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_diff_engine.py
